<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnInput"
        android:layout_width="147dp"
        android:layout_height="52dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="61dp"
        android:background="#004AAd"
        android:text="@string/btninputdata"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="46dp"
        android:background="#004AAd"
        android:text="@string/btneditdata"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInput" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="358dp"
        android:layout_height="193dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:contentDescription="@string/minilogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/mini__1_" />
</androidx.constraintlayout.widget.ConstraintLayout>