<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtextnama2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/edtextkode2"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,LabelFor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/jumlah_stok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="56dp"
        android:text="@string/nama_barang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="90dp"
        android:text="@string/kode_barang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtextkode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,LabelFor" />

    <EditText
        android:id="@+id/edtextstok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/edtextnama2"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,LabelFor" />

    <Button
        android:id="@+id/btnBaru"
        android:layout_width="98dp"
        android:layout_height="47dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        android:background="#004AAd"
        android:text="@string/baru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:background="#004AAd"
        android:text="@string/simpan"
        app:layout_constraintStart_toEndOf="@+id/btnBaru"
        app:layout_constraintTop_toBottomOf="@+id/edtextstok" />

    <Button
        android:id="@+id/btKembali"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="21dp"
        android:background="#004AAd"
        android:text="@string/kembali"
        app:layout_constraintStart_toEndOf="@+id/btnSimpan"
        app:layout_constraintTop_toBottomOf="@+id/edtextstok" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/input_data"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_data"
        android:layout_width="391dp"
        android:layout_height="487dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSimpan">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>