<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/jumlah_stok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="56dp"
        android:text="@string/nama_barang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="90dp"
        android:text="@string/kode_barang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtextnama2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/edtextkode2"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,LabelFor" />

    <EditText
        android:id="@+id/edtextkode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,LabelFor" />

    <Button
        android:id="@+id/btnUbah"
        android:layout_width="97dp"
        android:layout_height="47dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="33dp"
        android:background="#004AAd"
        android:text="@string/ubah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtextstok2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/edtextnama2"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,LabelFor" />

    <TableLayout
        android:id="@+id/tabelTampil"
        android:layout_width="388dp"
        android:layout_height="494dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUbah">

        <TableRow
            android:id="@+id/tabelRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/tabelRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/tabelRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/tabelRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_data"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnKembali"
        android:layout_width="109dp"
        android:layout_height="47dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="19dp"
        android:background="#55AD9B"
        android:text="@string/kembali"
        app:layout_constraintStart_toEndOf="@+id/btnHapus"
        app:layout_constraintTop_toBottomOf="@+id/edtextstok2"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnHapus"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:background="#55AD9B"
        android:text="@string/hapus"
        app:layout_constraintStart_toEndOf="@+id/btnUbah"
        app:layout_constraintTop_toBottomOf="@+id/edtextstok2"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>